# Photo-import-tool

./: CMakeLists.txt  README.md  main.cpp
cmake-modules/: FindGLIB.cmake
src/: CMakeLists.txt  main.cpp  photoimport.cpp  photoimport.h
